[package]
name = "payload-dumper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
bzip2 = "0.4.4"
prost = "0.13.3"
sha2 = "0.10.8"
liblzma = "0.3.5"
hex = "0.4.3"
zip = "2.2.1"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
crate-type = ["cdylib"]
